# pd-blokas

./: CMakeLists.txt  build.sh  clean.sh  ktrl.pd  make_deb.sh
debian/: changelog  control  copyright  rules
debian/DEBIAN/: control
debian/usr/lib/pd/extra/blokas/: ktrl.pd  monorack.pd
debian/usr/share/doc/pd-blokas/: changelog  changelog.Debian
